po: update po/sr_RS@latin/case.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/case.po
+++ b/po/sr_RS@latin/case.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-18 09:56+0000\n"
+"PO-Revision-Date: 2017-01-19 10:00+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -324,7 +324,7 @@ msgid ""
 "The selected case has been moved to the Trash. You can view and / or restore"
 " deleted cases by checking the \"Deleted Cases\" option under Find Cases.<br"
 " />"
-msgstr ""
+msgstr "Odabrani predmet je pomeren u kantu. Možete pregledati i/ili povratiti obrisane predmete tako što ćete uključiti \"obrisani predmeti\" u u filterima za pretragu predmeta.<br />"
 
 #: CRM/Case/Form/Case.php
 msgid "Case Deleted"
@@ -371,7 +371,7 @@ msgstr "Aktivnosti iz %1 seta aktivnosti su dodate u ovaj predmet."
 
 #: CRM/Case/Form/CaseView.php
 msgid " - any reporter - "
-msgstr ""
+msgstr "- Bilo koji reporter -"
 
 #: CRM/Case/Form/CaseView.php templates/CRM/Case/Form/ActivityTab.tpl
 msgid "Reporter/Role"
