--- a/po/pl_PL/extension.po
+++ b/po/pl_PL/extension.po
@@ -6,12 +6,13 @@
 # Michał Mach <michau@gmail.com>, 2013
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
 # Sergey <kovalski1601@gmail.com>, 2015
+# Wiktor Jezioro <wikjezioro@op.pl>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:11+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2017-01-19 11:39+0000\n"
+"Last-Translator: Wiktor Jezioro <wikjezioro@op.pl>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -74,7 +75,7 @@ msgstr ""
 
 #: CRM/Extension/Container/Basic.php
 msgid "Parse error in extension: %1"
-msgstr ""
+msgstr "Błąd parsowania w rozszerzeniu: %1"
 
 #: CRM/Extension/Container/Default.php
 msgid ""
@@ -118,7 +119,7 @@ msgstr ""
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: %1 cannot be cleared"
-msgstr ""
+msgstr "Nie powiodło się rozpakowanie rozszerzenia: %1 nie może być wyczyszczone"
 
 #: CRM/Extension/Downloader.php
 msgid "Installation Error"
@@ -126,7 +127,7 @@ msgstr "Błąd instalacji"
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension to %1."
-msgstr ""
+msgstr "Nie powiodło się rozpakowanie rozszerzenia do %1."
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension."
@@ -158,7 +159,7 @@ msgstr ""
 
 #: CRM/Extension/Manager.php
 msgid "Selected option value has been deleted."
-msgstr ""
+msgstr "Wybrana wartość opcji została usunięta."
 
 #: CRM/Extension/Browser.php
 msgid ""
