--- a/po/sr_RS@latin/admin.po
+++ b/po/sr_RS@latin/admin.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Đorđe Kolaković <djordje@catalystbalkans.org>, 2016-2017
+# Marinela Panić <marinela@catalystbalkans.org>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-16 15:25+0000\n"
-"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-01-19 14:36+0000\n"
+"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -167,15 +168,15 @@ msgstr ""
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Is this Label Format the default?"
-msgstr ""
+msgstr "Da li je ovaj format oznake podrazumevan?"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Sheet Size"
-msgstr ""
+msgstr "Veličina lista"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Sheet Size (w x h)"
-msgstr ""
+msgstr "Veličina lista (širina X visina)"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Label Width"
@@ -1448,11 +1449,11 @@ msgstr "Podešavanja - odlazna pošta"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Sendmail Path"
-msgstr ""
+msgstr "Sendmail putanja"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "Sendmail Argument"
-msgstr ""
+msgstr "Sendmail argument"
 
 #: CRM/Admin/Form/Setting/Smtp.php
 msgid "SMTP Server"
