--- a/po/pl_PL/batch.po
+++ b/po/pl_PL/batch.po
@@ -7,12 +7,13 @@
 # Czauderna Tomasz <tczaude@gmail.com>, 2014
 # MichDem <10mkudela@gmail.com>, 2012
 # Sergey <kovalski1601@gmail.com>, 2015
+# Wiktor Jezioro <wikjezioro@op.pl>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-19 11:38+0000\n"
+"Last-Translator: Wiktor Jezioro <wikjezioro@op.pl>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -66,7 +67,7 @@ msgstr ""
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch ID"
-msgstr ""
+msgstr "Identyfikator serii"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Description"
@@ -243,7 +244,7 @@ msgstr ""
 
 #: CRM/Batch/Form/Entry.php
 msgid "Transaction ID must be unique within the database"
-msgstr ""
+msgstr "ID transakcji musi być unikatowy w bazie danych"
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
