--- a/po/sr_RS@latin/extension.po
+++ b/po/sr_RS@latin/extension.po
@@ -3,12 +3,12 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016-2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-28 10:55+0000\n"
+"PO-Revision-Date: 2017-01-19 14:54+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -124,11 +124,11 @@ msgstr "Greška pri instalaciji"
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension to %1."
-msgstr ""
+msgstr "Nemoguće raspakovati ekstenziju u %1."
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension."
-msgstr ""
+msgstr "Nemoguće raspakovati ekstenziju."
 
 #: CRM/Extension/Downloader.php
 msgid "Failed reading data from %1 during installation"
