po: update po/nl_NL/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/member.po
+++ b/po/nl_NL/member.po
@@ -5,7 +5,7 @@
 # Translators:
 # brouwser <brouwer@ee-atwork.nl>, 2012
 # Geert Buyse <geert.buyse@chiro.be>, 2017
-# HanV <han.velthuis@home.nl>, 2013-2016
+# HanV <han.velthuis@home.nl>, 2013-2017
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011
 # Kevin Levie <kevin@levity.nl>, 2015-2016
@@ -15,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-18 13:49+0000\n"
-"Last-Translator: Geert Buyse <geert.buyse@chiro.be>\n"
+"PO-Revision-Date: 2017-01-19 13:51+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2297,19 +2297,19 @@ msgstr "Dit lidmaatschap wordt automatisch verlengd. U kunt het automatisch verl
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Auto-Renew and In Progress"
-msgstr ""
+msgstr "Lidmaatschap wordt automatisch verlengd, nog lopend"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Auto-Renew and Failed"
-msgstr ""
+msgstr "Lidmaatschap wordt automatisch verlengd, mislukt"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Auto-Renew and Cancelled"
-msgstr ""
+msgstr "Lidmaatschap wordt automatisch verlengd, maar is geannuleerd"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is Auto-Renew and Ended"
-msgstr ""
+msgstr "Lidmaatschap wordt automatisch verlengd, maar is beëindigd"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership Status Is Overriden"
@@ -2321,7 +2321,7 @@ msgstr "Status lidmaatschap automatisch ingesteld"
 
 #: CRM/Member/BAO/Query.php
 msgid "Auto-Renew Subscription Status?"
-msgstr ""
+msgstr "Status automatisch verlengen registratie?"
 
 #: CRM/Member/BAO/Query.php
 msgid "- None -"
@@ -2420,13 +2420,13 @@ msgstr "Leden exporteren"
 
 #: CRM/Member/Task.php
 msgid "Print/merge document for memberships"
-msgstr ""
+msgstr "Lidmaatschapsbewijs afdrukken/samenvoegen"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
 "Automatically email a membership confirmation and receipt to %1? OR if the "
 "payment is from a different contact, this email will only go to them."
-msgstr ""
+msgstr "Automatisch een bevestiging van lidmaatschap e-mailen naar %1? Indien de betaling door een ander contact is gedaan, dan krijgt alleen dat contact de e-mail."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
@@ -2456,38 +2456,38 @@ msgstr "Kies niets om alle lidmaatschappen te tonen"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Auto-Renew Subscription Status"
-msgstr ""
+msgstr "Status automatisch verlengen registratie"
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"None\" to display memberships that have never had an auto-renew "
 "subscription."
-msgstr ""
+msgstr "Kies \"Geen\" om de lidmaatschappen te tonen die nooit een automatisch verlengen registratie gehad hebben."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"In Progress\" to display memberships with current auto-renew "
 "subscriptions."
-msgstr ""
+msgstr "Kies \"Nog lopend\" om de lidmaatschappen te tonen die nu een automatisch verlengen registratie hebben."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid "Select \"Failed\" to display memberships with failed subscription payment."
-msgstr ""
+msgstr "Kies \"Mislukt\" om de lidmaatschappen te tonen met een mislukte betaling."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"Cancelled\" to display memberships with cancelled auto-renew "
 "subscriptions."
-msgstr ""
+msgstr "Kies \"Geannuleerd\" om de lidmaatschappen te tonen waarvan de automatische verlenging geannuleerd is."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"Ended\" to display memberships with an ended auto-renew "
 "subscription."
-msgstr ""
+msgstr "Kies \"Beëindigd\" om de lidmaatschappen te tonen waarvan de automatische verlenging beëindigd is."
 
 #: templates/CRM/Member/Form/Search.hlp
 msgid ""
 "Select \"Any\" to display memberships with auto-renew subscription "
 "irrespective of their status."
-msgstr ""
+msgstr "Kies \"Alle\" om de lidmaatschappen te tonen, ongeacht de status."
