po: update po/ca_ES/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/event.po
+++ b/po/ca_ES/event.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-19 17:37+0000\n"
+"PO-Revision-Date: 2017-01-20 08:35+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -2913,7 +2913,7 @@ msgid ""
 " Attended will receive a confirmation email and their payment status will be"
 " set to completed. If this is not what you want to do, you can change their "
 "participant status by editing their event registration record directly."
-msgstr "Els participants l'estat dels quals es canvia des de Pendent (pagament diferit) a Inscrit o Assistit rebran un correu electrònic de confirmació i el seu estat de pagament quedarà marcat com a completats. Si no és el que voleu, podeu canviar els estats de participant editant directament els seus registres d'inscripció als esdeveniments."
+msgstr "Els participants l'estat dels quals es canvia de Pendent (pagament diferit) a Inscrit o Assistit rebran un correu electrònic de confirmació i el seu estat de pagament quedarà marcat com a completats. Si no és el que voleu, podeu canviar els estats de participant editant directament els seus registres d'inscripció als esdeveniments."
 
 #: templates/CRM/Event/Form/Task/Batch.tpl
 msgid ""
@@ -3799,7 +3799,7 @@ msgid ""
 " Attended will receive a confirmation email and their payment status will be"
 " set to completed. If this is not you want to do, you can change their "
 "participant status by editing their event registration record directly."
-msgstr "Els participants l'estat dels quals es canvia des de Pendent (pagament diferit) a Inscrit o Assistit rebran un correu electrònic de confirmació i el seu estat de pagament quedarà marcat com a completats. Si no és el que voleu, podeu canviar els estats de participant editant directament els seus registres d'inscripció als esdeveniments."
+msgstr "Els participants l'estat dels quals es canvia de Pendent (pagament diferit) a Inscrit o Assistit rebran un correu electrònic de confirmació i el seu estat de pagament quedarà marcat com a completats. Si no és el que voleu, podeu canviar els estats de participant editant directament els seus registres d'inscripció als esdeveniments."
 
 #: CRM/Event/Form/Task/Batch.php
 msgid ""
