po: update po/cy_GB/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/cy_GB/mailing.po
+++ b/po/cy_GB/mailing.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-19 18:48+0000\n"
+"PO-Revision-Date: 2017-01-20 16:03+0000\n"
 "Last-Translator: Robin Farrar <hogyndrwg@gmail.com>\n"
 "Language-Team: Welsh (United Kingdom) (http://www.transifex.com/civicrm/civicrm/language/cy_GB/)\n"
 "MIME-Version: 1.0\n"
@@ -455,107 +455,107 @@ msgstr "Dilëwyd At"
 
 #: CRM/Mailing/Event/BAO/Bounce.php
 msgid "Unknown bounce type: Could not parse bounce email"
-msgstr ""
+msgstr "Math anhysbys o fownsio: Doedd dim modd dosrannu'r ebost bownsio"
 
 #: CRM/Mailing/Event/BAO/Bounce.php
 msgid "Unknown"
-msgstr ""
+msgstr "Anhysbys"
 
 #: CRM/Mailing/Event/BAO/Subscribe.php
 msgid "You are already subscribed in %1, your subscription is %2."
-msgstr ""
+msgstr "Rydych eisoes wedi tanysgrifio yn %1, mae eich tanysgrifiad yn %2."
 
 #: CRM/Mailing/Event/BAO/Subscribe.php
 msgid ""
 "Your subscription request has been submitted for %1. Check your inbox "
 "shortly for the confirmation email(s). If you do not see a confirmation "
 "email, please check your spam/junk mail folder."
-msgstr ""
+msgstr "Mae eich cais tanysgrifio wedi ei gyflwyno ar gyfer %1. Edrychwch yn eich blwch derbyn toc ar gyfer ebost (ebyst) gadarnhau. Os nad ydych yn gweld ebost gadarnhau, edrychwch yn eich ffolder sbam/sothach."
 
 #: CRM/Mailing/Event/BAO/Subscribe.php
 msgid ""
 "We had a problem processing your subscription request for %1. You have tried"
 " to subscribe to a private group and/or we encountered a database error. "
 "Please contact the site administrator."
-msgstr ""
+msgstr "Cawsom broblem wrth brosesu eich cais tanysgrifio ar gyfer %1. Rydych wedi ceisio tanysgrifio i grŵp preifat a/neu roedd gwall bas data ar ein hochr ni. Cysylltwch â gweinyddwr y safle os gwelwch yn dda."
 
 #: CRM/Mailing/Event/DAO/Bounce.php CRM/Mailing/Event/DAO/Delivered.php
 #: CRM/Mailing/Event/DAO/Forward.php CRM/Mailing/Event/DAO/Opened.php
 #: CRM/Mailing/Event/DAO/Reply.php CRM/Mailing/Event/DAO/TrackableURLOpen.php
 msgid "Time Stamp"
-msgstr ""
+msgstr "Stamp Amser"
 
 #: CRM/Mailing/Event/DAO/Confirm.php
 msgid "Mailing Confirmation ID"
-msgstr ""
+msgstr "ID Cadarnhad y Postiad"
 
 #: CRM/Mailing/Event/DAO/Confirm.php CRM/Mailing/Event/DAO/Subscribe.php
 msgid "Mailing Subscribe ID"
-msgstr ""
+msgstr "ID Tanysgrifio Postiad"
 
 #: CRM/Mailing/Event/DAO/Confirm.php
 msgid "Confirm Timestamp"
-msgstr ""
+msgstr "Cadarnhau Stamp Amser"
 
 #: CRM/Mailing/Event/DAO/Queue.php
 msgid "Mailing Event Queue ID"
-msgstr ""
+msgstr "ID Ciw Digwyddiadau Postio"
 
 #: CRM/Mailing/Event/DAO/Queue.php
 msgid "Security Hash"
-msgstr ""
+msgstr "Hash Diogelwch"
 
 #: CRM/Mailing/Event/DAO/Subscribe.php
 msgid "Mailing Subscribe Group"
-msgstr ""
+msgstr "Grŵp Tanysgrifio Postiad"
 
 #: CRM/Mailing/Event/DAO/Subscribe.php
 msgid "Mailing Subscribe Contact"
-msgstr ""
+msgstr "Cyswllt Tanysgrifio Postiad"
 
 #: CRM/Mailing/Event/DAO/Subscribe.php
 msgid "Mailing Subscribe Hash"
-msgstr ""
+msgstr "Hash Tanysgrifio Postiad"
 
 #: CRM/Mailing/Event/DAO/Subscribe.php
 msgid "Mailing Subscribe Timestamp"
-msgstr ""
+msgstr "Stamp Amser Tanysgrifio Postiad"
 
 #: CRM/Mailing/Event/DAO/Unsubscribe.php
 msgid "Unsubscribe ID"
-msgstr ""
+msgstr "ID dad-danysgrifio"
 
 #: CRM/Mailing/Event/DAO/Unsubscribe.php
 msgid "Mailing Event Queue"
-msgstr ""
+msgstr "Ciw Digwyddiadau Postio"
 
 #: CRM/Mailing/Event/DAO/Unsubscribe.php
 msgid "Unsubscribe is for Organization?"
-msgstr ""
+msgstr "Dad-danysgrifio ar gyfer Sefydliad?"
 
 #: CRM/Mailing/Event/DAO/Unsubscribe.php
 msgid "Unsubscribe Timestamp"
-msgstr ""
+msgstr "Stamp Amser Dad-danysgrifio"
 
 #: CRM/Mailing/Form/Approve.php CRM/Mailing/Selector/Browse.php
 msgid "Approve/Reject Mailing"
-msgstr ""
+msgstr "Cymeradwyo/Gwrthod Postiad"
 
 #: CRM/Mailing/Form/Approve.php
 msgid "Approve/Reject Note"
-msgstr ""
+msgstr "Cymeradwyo/Gwrthod Nodyn"
 
 #: CRM/Mailing/Form/Component.php
 msgid "Component Type"
-msgstr ""
+msgstr "Math o Gydran"
 
 #: CRM/Mailing/Form/Component.php
 msgid "Body - TEXT Format"
-msgstr ""
+msgstr "Corff - Fformat TESTUN"
 
 #: CRM/Mailing/Form/Component.php
 msgid "Body - HTML Format"
-msgstr ""
+msgstr "Corff - Fformat HTML"
 
 #: CRM/Mailing/Form/Component.php
 msgid "The mailing component '%1' has been saved."
@@ -564,11 +564,11 @@ msgstr "Cafodd yr elfen '%1' ei chadw."
 #: CRM/Mailing/Form/Component.php
 msgid ""
 "This token can only be used in send mailing context (body, header, footer).."
-msgstr ""
+msgstr "Dim ond yng nghyd-destun anfon postiad (corff, pennyn, troedyn) y gellid defnyddio'r tocyn hwn."
 
 #: CRM/Mailing/Form/Component.php
 msgid "This message is having a invalid token - %1: %2"
-msgstr ""
+msgstr "Mae tocyn annilys gan y neges hon - %1: %2"
 
 #: CRM/Mailing/Form/Component.php
 msgid "The following errors were detected in %1 message:"
