--- a/po/es_ES/event.po
+++ b/po/es_ES/event.po
@@ -8,7 +8,7 @@
 # David Cereceto Martínez <dcereceto@gmail.com>, 2014
 # fmcooke <fmcooke@yahoo.com>, 2012
 # fmcooke <fmcooke@yahoo.com>, 2012
-# francescbassas <francesc@babu.cat>, 2015
+# francescbassas <francesc@babu.cat>, 2015,2017
 # ixiam <info@ixiam.com>, 2013,2016
 # ixiam <info@ixiam.com>, 2011
 # Javier Monterroso <jmonterroso@ndi.org>, 2015
@@ -24,8 +24,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-14 17:32+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2017-01-20 11:34+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1655,7 +1655,7 @@ msgstr "La sesión está completa"
 
 #: templates/CRM/Event/Cart/Form/Checkout/ConferenceEvents.tpl
 msgid "more info"
-msgstr "mas información"
+msgstr "más información"
 
 #: templates/CRM/Event/Cart/Form/Checkout/ConferenceEvents.tpl
 msgid "No description available for this event"
