--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -8,7 +8,7 @@
 # brouwser <brouwer@ee-atwork.nl>, 2012
 # brouwser <brouwer@ee-atwork.nl>, 2012-2013
 # Geert Buyse <geert.buyse@chiro.be>, 2015-2017
-# HanV <han.velthuis@home.nl>, 2013-2016
+# HanV <han.velthuis@home.nl>, 2013-2017
 # HanV <han.velthuis@home.nl>, 2011-2012
 # HanV <han.velthuis@home.nl>, 2011
 # Jan Hovenkamp <info@vvactief.nl>, 2014
@@ -22,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-18 13:37+0000\n"
-"Last-Translator: Geert Buyse <geert.buyse@chiro.be>\n"
+"PO-Revision-Date: 2017-01-20 18:39+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24924,7 +24924,7 @@ msgstr "Groepslidmaatschap tracking"
 
 #: CRM/Contact/Form/DedupeFind.php
 msgid "No of contacts to find matches for "
-msgstr ""
+msgstr "Aantal contacten waarbij overeenkomsten gevonden moeten worden"
 
 #: CRM/Contact/Form/Edit/Website.php CRM/Core/BAO/CustomField.php
 #: CRM/Core/BAO/UFGroup.php
@@ -24983,7 +24983,7 @@ msgstr[1] "Er zijn %count berichten verzonden."
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Print/Merge Document for %1"
-msgstr ""
+msgstr "Document afdrukken/samenvoegen voor %1"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Document Type"
@@ -24995,7 +24995,7 @@ msgstr "Download Document"
 
 #: CRM/Contact/Form/Task/PDFLetterCommon.php
 msgid "Invalid document file format"
-msgstr ""
+msgstr "Bestandsformaat document ongeldig"
 
 #: CRM/Contact/Form/Task/PickProfile.php
 msgid ""
@@ -25019,7 +25019,7 @@ msgstr "Het geselecteerde contacttype voor het wijzigen van meerdere contacten h
 
 #: CRM/Contact/Import/Form/DataSource.php
 msgid "Disable USPS address validation during import?"
-msgstr ""
+msgstr "Tijdens het importeren de USPS-adresvalidatie uitschakelen?"
 
 #: CRM/Contact/Import/Parser/Contact.php
 msgid ""
@@ -25158,7 +25158,7 @@ msgstr "Betaalmethode"
 
 #: CRM/Core/BAO/UFField.php
 msgid "Contribution Transaction ID"
-msgstr ""
+msgstr "Bijdrage transactienummer "
 
 #: CRM/Core/Config/MagicMerge.php
 msgid ""
@@ -25236,7 +25236,7 @@ msgstr "Streek-ID"
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "Cache Minutes"
-msgstr ""
+msgstr "Cache minuten"
 
 #: CRM/Core/DAO/Discount.php
 msgid "Discount ID"
@@ -25376,7 +25376,7 @@ msgstr "Inloggen toegestaan?"
 
 #: CRM/Core/DAO/OptionGroup.php
 msgid "Data Type for this option group"
-msgstr ""
+msgstr "Datatype van deze optiegroep"
 
 #: CRM/Core/DAO/Persistent.php
 msgid "Persistent ID"
@@ -25575,11 +25575,11 @@ msgstr "Online bijdrage:"
 
 #: CRM/Core/Permission.php
 msgid "import SQL datasource"
-msgstr ""
+msgstr "importeer SQL-datasource"
 
 #: CRM/Core/Permission.php
 msgid "When importing, consume data directly from a SQL datasource"
-msgstr ""
+msgstr "Gebruik voor het importeren direct gegevens van een SQL-datasource"
 
 #: CRM/Core/Permission.php
 msgid "force merge duplicate contacts"
@@ -25715,7 +25715,7 @@ msgstr "Contact-id %1 is samengevoegd met contact-id %2 en is verwijderd."
 
 #: CRM/Dedupe/Merger.php
 msgid "Cannot merge because the '%1' contact (ID %2) has been deleted."
-msgstr ""
+msgstr "Samenvoegen niet mogelijk omdat het '%1' contact (id %2) is verwijderd."
 
 #: CRM/Export/Form/Select.php
 msgid "Export Options"
@@ -25822,18 +25822,18 @@ msgid ""
 "This system uses PHP version %1. CiviCRM can be installed on this version, "
 "but some specific features are known to fail or degrade. Version %3 is the "
 "bare minimum to avoid known issues, and version %2 is recommended."
-msgstr ""
+msgstr "Dit systeem gebruikt PHP-versie %1. CiviCRM kan met deze versie worden gebruikt, maar dan zullen enkele specifieke opties niet of minder goed werken. Gebruik minstens versie %3 om dit te voorkomen, de aanbevolen versie is %2."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid ""
 "Future versions of CiviCRM may require the PHP extension \"%2\". To ensure "
 "that your system will be compatible, please install it in advance. For more "
 "explanation, see <a href=\"%1\">the announcement</a>."
-msgstr ""
+msgstr "In een toekomstige versie van CiviCRM is mogelijk de PHP-extensie \"%2\" verplicht. U kunt deze nu al installeren om te zorgen dat uw systeem dan geschikt is. Lees voor meer informatie deze <a href=\"%1\">toelichting</a>."
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Forward Compatibility: Enable \"mysqli\""
-msgstr ""
+msgstr "Voor toekomstige compatibiliteit : inschakelen \"mysqli\""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Timestamp Mismatch"
@@ -26122,7 +26122,7 @@ msgstr "MyISAM database-engine"
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid "<tr><td> \"%1\" </td><td> \"%2\" </td></tr>"
-msgstr ""
+msgstr "<tr><td> \"%1\" </td><td> \"%2\" </td></tr>"
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid ""
@@ -26132,7 +26132,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid "</tbody></table></p>"
-msgstr ""
+msgstr "</tbody></table></p>"
 
 #: CRM/Utils/Check/Component/OptionGroups.php
 msgid "Option Values with problematic Values"
@@ -26195,7 +26195,7 @@ msgstr "Systeemstatus: OK"
 
 #: CRM/Utils/OpenFlashChart.php
 msgid "Yearly (Fiscal)"
-msgstr ""
+msgstr "Jaarlijks (Fiscaal)"
 
 #: CRM/Utils/OpenFlashChart.php
 msgid "%1"
@@ -26253,7 +26253,7 @@ msgstr ""
 
 #: js/jquery/jquery.dashboard.js
 msgid "\"%1\" Removed"
-msgstr ""
+msgstr "\"%1\" verwijderd"
 
 #: js/model/crm.uf.js
 msgid "(Copy)"
@@ -26348,7 +26348,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.hlp
 msgid "Supported file formats: %1"
-msgstr ""
+msgstr "Ondersteunde bestandsformaten: %1"
 
 #: templates/CRM/Contact/Form/Task/PDFLetterCommon.tpl
 msgid "Preview Document"
@@ -26546,11 +26546,11 @@ msgstr "Toon %1 records"
 
 #: templates/CRM/common/navigation.js.tpl
 msgid "%1 not found."
-msgstr ""
+msgstr "%1 niet gevonden."
 
 #: templates/CRM/common/navigation.js.tpl
 msgid "Did you mean to search by Name/Email instead?"
-msgstr ""
+msgstr "Wilt u zoeken op naam/e-mailadres?"
 
 #: templates/CRM/common/success.tpl
 msgid "The database will be upgraded from %1 to %2."
@@ -26646,11 +26646,11 @@ msgstr "Toont een simpele samenvatting voor alle betaalwijzen waarvoor er period
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue Details"
-msgstr ""
+msgstr "Details uitgestelde opbrengsten"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue Details Report"
-msgstr ""
+msgstr "Rapport details uitgestelde opbrengsten"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Textarea"
@@ -26666,7 +26666,7 @@ msgstr "Rekening voor terugboekingen is"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue Account is"
-msgstr ""
+msgstr "Uitgestelde opbrengstenrekening is"
 
 #: xml/templates/civicrm_data.tpl
 msgid "This week"
@@ -26906,11 +26906,11 @@ msgstr "Vanaf eind vorig jaar"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue - Event Fee"
-msgstr ""
+msgstr "Uitgestelde opbrengsten - Kosten"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Deferred Revenue - Member Dues"
-msgstr ""
+msgstr "Uitgestelde opbrengsten - Contributie"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
@@ -27039,7 +27039,7 @@ msgid ""
 "By default, CiviCRM now disables the ability to import directly from SQL. To"
 " use this feature, you must explicitly grant permission 'import SQL "
 "datasource'."
-msgstr ""
+msgstr "Standaard is in CiviCRM de optie om direct gegevens uit SQL te importen uitgeschakeld. Om deze functionaliteit te kunnen gebruiken moet u het recht 'importeer SQL-datasource' eerst verlenen."
 
 #: CRM/Upgrade/Incremental/php/FourSeven.php
 msgid "Migrate Settings to %1"
