--- a/po/nl_NL/report.po
+++ b/po/nl_NL/report.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-18 20:40+0000\n"
+"PO-Revision-Date: 2017-01-20 16:56+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -2240,19 +2240,19 @@ msgstr "% Wijziging"
 
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Week Beginning"
-msgstr ""
+msgstr "Begin van de week"
 
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Year Beginning"
-msgstr ""
+msgstr "Begin van het jaar"
 
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Fiscal Year Beginning"
-msgstr ""
+msgstr "Begin van het fiscale jaar"
 
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Month Beginning"
-msgstr ""
+msgstr "Begin van de maand"
 
 #: CRM/Report/Form/Contribute/Sybunt.php
 msgid "Up To %1"
@@ -2290,11 +2290,11 @@ msgstr "Criteria tonen"
 
 #: CRM/Report/Form/Instance.php
 msgid "Cache dashlet for"
-msgstr ""
+msgstr "Cache dashlet gedurende"
 
 #: CRM/Report/Form/Instance.php
 msgid "Add to My Reports?"
-msgstr ""
+msgstr "Aan mijn rapporten toevoegen?"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Date"
@@ -2314,7 +2314,7 @@ msgstr "Opnieuw ingeschakeld op"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "--Please Select--"
-msgstr ""
+msgstr "--selecteer a.u.b.--"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Unique Open Rate"
@@ -2330,7 +2330,7 @@ msgstr "Opt-outs"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Groups Included in Mailing"
-msgstr ""
+msgstr "Aan de mailing toegevoegde groepen"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "View Mailing details for this mailing"
@@ -2338,11 +2338,11 @@ msgstr "Bekijk mailinggegevens van deze mailing"
 
 #: CRM/Report/Form/Member/Lapse.php
 msgid "Lapsed Memberships"
-msgstr ""
+msgstr "Verlopen lidmaatschappen"
 
 #: CRM/Report/Form.php
 msgid " (copy created by %1 on %2)"
-msgstr ""
+msgstr " (kopie aangemaakt door %1 op %2)"
 
 #: CRM/Report/Form.php
 msgid "Developer"
@@ -2362,7 +2362,7 @@ msgstr "Geen SMS"
 
 #: CRM/Report/Form.php
 msgid "Do not bulk email"
-msgstr ""
+msgstr "Geen massa-mail"
 
 #: CRM/Report/Form.php
 msgid "Refresh results"
@@ -2374,11 +2374,11 @@ msgstr "Resultaten tonen"
 
 #: CRM/Report/Info.php
 msgid "administer private reports"
-msgstr ""
+msgstr "beheer vertrouwelijke rapporten"
 
 #: CRM/Report/Info.php
 msgid "Edit all private reports"
-msgstr ""
+msgstr "Wijzig alle vertrouwelijke rapporten"
 
 #: CRM/Report/Info.php
 msgid "view report sql"
@@ -2408,36 +2408,36 @@ msgstr "Link naar"
 msgid ""
 "If set to Yes, this report will appear in the My Reports section of the "
 "reports listing page and will only be visible by you."
-msgstr ""
+msgstr "Indien deze optie wordt gekozen, dan wordt dit rapport getoond in de sectie mijn rapporten en is het rapport alleen voor u zichtbaar."
 
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid "rows"
-msgstr ""
+msgstr "rijen"
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid "Dashboard Caching"
-msgstr ""
+msgstr "Dashboard caching"
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid ""
 "How often should the contents of this dashlet be automatically refreshed? "
 "Users can manually reload by clicking the refresh button on their "
 "dashboards."
-msgstr ""
+msgstr "Hoe vaak moet de inhoud van deze dashlet automatisch worden ververst? Gebruikers kunnen dit ook handmatig doen met de verversknop op hun dashboard."
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid "Add to My Reports"
-msgstr ""
+msgstr "Aan mijn rapporten toevoegen"
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid ""
 "Selecting Yes will set the report to be visible only to the user\n"
 "  that clicked this option and saved the report settings form. If this is\n"
 "  enabled, the permissions configuration for this report will be disabled."
-msgstr ""
+msgstr "Als een gebruiker hier ja kiest en de keuze vastlegt dan wordt dit rapport alleen zichtbaar voor die gebruiker. Indien een gebruiker dit heeft gedaan dan kan een andere gebruiker de instellingen voor dit rapport ook niet meer wijzigen."
 
 #: templates/CRM/Report/Page/InstanceList.tpl
 msgid ""
 "You do not have any private reports. To add a report to this section, edit "
 "the Report Settings for a report and set 'Add to My Reports' to Yes."
-msgstr ""
+msgstr "U heeft geen vertrouwelijke rapporten. Als u een rapport vertrouwelijk wilt maken, wijzig dan de instelling 'Aan mijn rapporten toevoegen' van dat rapport."
