po: update po/sr_RS@latin/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/financial.po
+++ b/po/sr_RS@latin/financial.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-18 10:21+0000\n"
+"PO-Revision-Date: 2017-01-20 12:21+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -35,7 +35,7 @@ msgstr "Poslednja izmena:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Instrument:"
-msgstr ""
+msgstr "Sredstvo plaćanja:"
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Batch"
@@ -77,7 +77,7 @@ msgstr ""
 msgid ""
 "Unbalanced transactions may be created if you delete the account of type: "
 "%1."
-msgstr ""
+msgstr "Može doći do nebalansiranih transakcija ukoliko obrišete tip računa: %1"
 
 #: CRM/Financial/BAO/PaymentProcessor.php
 msgid "Invalid value passed to getPayment function"
@@ -95,7 +95,7 @@ msgstr ""
 
 #: CRM/Financial/BAO/PaymentProcessorType.php
 msgid "Selected Payment Processor type has been deleted.<br/>"
-msgstr ""
+msgstr "Odabrani tip procesora uplate je obrisan.<br/>"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Symbol"
@@ -214,28 +214,28 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialType.php
 msgid "Financial Type is Reserved?"
-msgstr ""
+msgstr "Finansijski tip je rezervisan?"
 
 #: CRM/Financial/DAO/FinancialType.php
 msgid "Financial Type Is Active?"
-msgstr ""
+msgstr "Finansijski tip je aktivan?"
 
 #: CRM/Financial/DAO/PaymentProcessor.php CRM/Financial/DAO/PaymentToken.php
 msgid "Payment Processor ID"
-msgstr ""
+msgstr "ID procesora uplate"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Payment Processor Domain"
-msgstr ""
+msgstr "Domen procesora uplate"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor Description"
-msgstr ""
+msgstr "Opis procesora"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 #: CRM/Financial/DAO/PaymentProcessorType.php
 msgid "Payment Processor Type ID"
-msgstr ""
+msgstr "ID tipa procesora uplate"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor is Active?"
@@ -243,7 +243,7 @@ msgstr "Procesor je aktivan?"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Processor Is Default?"
-msgstr ""
+msgstr "Procesor je podrazumevani?"
 
 #: CRM/Financial/DAO/PaymentProcessor.php
 msgid "Is Test Processor?"
@@ -582,7 +582,7 @@ msgstr ""
 #: templates/CRM/Financial/Form/BatchTransaction.tpl
 #: templates/CRM/Financial/Page/BatchTransaction.tpl
 msgid "Trxn ID"
-msgstr ""
+msgstr "ID transakcije"
 
 #: CRM/Financial/Page/Batch.php
 msgid "Accounting Batch Processing"
