po: update po/sr_RS@latin/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/drupal-civicrm.po
+++ b/po/sr_RS@latin/drupal-civicrm.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2017-01-19 23:57+0000\n"
+"PO-Revision-Date: 2017-01-20 12:35+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -696,7 +696,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The numeric ID of the Contact"
-msgstr ""
+msgstr "numerički ID kontakta"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Drupal ID"
@@ -712,11 +712,11 @@ msgstr "Drupal korisnik"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Sort Name"
-msgstr ""
+msgstr "Ime za sortiranje"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Contact Name for sorting purposes, Last Name then First"
-msgstr ""
+msgstr "Ime kontakta za sortiranje, prezime pa ime"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Display Name"
@@ -724,11 +724,11 @@ msgstr "Ime za prikaz"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Full Name of the Contact with prefixes and suffixes"
-msgstr ""
+msgstr "Puno ime kontakta sa prefiksima i sufiksima"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Contact's Gender"
-msgstr ""
+msgstr "Pol kontakta"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "First Name"
@@ -2354,23 +2354,23 @@ msgstr ""
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_relationship.inc
 msgid "Link to View Relationship A-B"
-msgstr ""
+msgstr "Link za pregled veze A-B"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_relationship.inc
 msgid "Link to Edit Relationship A-B"
-msgstr ""
+msgstr "Link za uređivanje veze A-B"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_relationship.inc
 msgid "Link to View Relationship B-A"
-msgstr ""
+msgstr "Link za pregled veze B-A"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_relationship.inc
 msgid "Link to Edit Relationship B-A"
-msgstr ""
+msgstr "Link za uređivanje veze B-A"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_relationship.inc
 msgid "Link to Delete Relationship"
-msgstr ""
+msgstr "Link za brisanje veze"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_relationship.inc
 msgid ""
@@ -2440,11 +2440,11 @@ msgstr "Ime grupe"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_contact_link.inc
 msgid "Link this field to its CiviCRM Contact"
-msgstr ""
+msgstr "Poveži ovo polje sa CiviCRM kontaktom"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_event.inc
 msgid "Link this field to its event page"
-msgstr ""
+msgstr "Poveži ovo polje sa stranicom za događaj"
 
 #: drupal/modules/views/civicrm/civicrm_plugin_argument_default.inc
 msgid "Also look for a node and use the node author"
@@ -2864,7 +2864,7 @@ msgstr "Mailing"
 
 #: drupal/modules/civicrm_engage/Engage/Report/Form/List.php
 msgid "Is one of"
-msgstr ""
+msgstr "je jedan od"
 
 #: drupal/modules/civicrm_engage/Engage/Report/Form/List.php
 msgid "Is equal to"
@@ -2872,7 +2872,7 @@ msgstr "je jednako"
 
 #: drupal/modules/civicrm_engage/Engage/Report/Form/WalkList.php
 msgid "Other Name"
-msgstr ""
+msgstr "Drugo ime"
 
 #: drupal/modules/civicrm_engage/Engage/Report/Form/WalkList.php
 msgid "Street#"
@@ -2912,7 +2912,7 @@ msgstr "Poštanski broj"
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 msgid "State"
-msgstr ""
+msgstr "Država"
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 msgid "Email"
@@ -2920,7 +2920,7 @@ msgstr "Email"
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 msgid "Is Held"
-msgstr ""
+msgstr "Zadržan"
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Task/ReleaseVoters.php
 msgid ""
