po: update po/sr_RS@latin/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-18 15:31+0000\n"
+"PO-Revision-Date: 2017-01-20 10:52+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -346,7 +346,7 @@ msgstr "Dodelite ovu dozvolu nekoj od uloga"
 
 #: CRM/ACL/Form/ACL.php
 msgid "Only 'View' and 'Edit' operations are valid for this type of data"
-msgstr ""
+msgstr "Za ovaj tip podataka, dozvoljene operacije su Vidi i Uredi."
 
 #: CRM/ACL/Form/ACL.php
 msgid "Please select a Group (or ALL Groups)."
@@ -362,7 +362,7 @@ msgstr ""
 
 #: CRM/ACL/Form/ACL.php
 msgid "Please select an Event (or ALL Events)."
-msgstr ""
+msgstr "Izaberite događaj (ili SVE događaje)."
 
 #: CRM/ACL/Form/ACL.php CRM/ACL/Form/ACLBasic.php
 msgid "Selected ACL has been deleted."
@@ -555,7 +555,7 @@ msgstr ""
 
 #: CRM/Activity/BAO/Activity.php CRM/Activity/Import/Parser/Activity.php
 msgid "Source Contact"
-msgstr ""
+msgstr "Kontakt - izvor"
 
 #: CRM/Activity/BAO/Activity.php CRM/Activity/Form/Activity.php
 #: CRM/Activity/Selector/Activity.php
@@ -595,7 +595,7 @@ msgstr "Trajanje aktivnosti"
 
 #: CRM/Activity/BAO/Activity.php CRM/Activity/DAO/Activity.php
 msgid "Activity Medium"
-msgstr ""
+msgstr "Medij aktivnosti"
 
 #: CRM/Activity/BAO/Activity.php CRM/Core/SelectValues.php
 msgid "Activity Details"
@@ -863,11 +863,11 @@ msgstr "Redosled"
 
 #: CRM/Activity/DAO/ActivityContact.php
 msgid "Activity Contact ID"
-msgstr ""
+msgstr "ID kontakta aktivnosti"
 
 #: CRM/Activity/DAO/ActivityContact.php
 msgid "Contact ID (match to contact)"
-msgstr ""
+msgstr "ID kontakta (uskladi sa kontaktom)"
 
 #: CRM/Activity/DAO/ActivityContact.php
 msgid "Record Type ID"
@@ -1377,7 +1377,7 @@ msgstr ""
 #: CRM/Activity/Import/Form/MapField.php CRM/Contact/Import/Form/MapField.php
 #: CRM/Core/BAO/Mapping.php
 msgid "Save this field mapping"
-msgstr ""
+msgstr "Sačuvaj mapiranje ovog polja"
 
 #: CRM/Activity/Import/Form/MapField.php CRM/Contact/BAO/Query.php
 #: CRM/Contact/DAO/ContactType.php
@@ -1425,12 +1425,12 @@ msgstr "Ime"
 #: CRM/Activity/Import/Form/MapField.php CRM/Contact/Import/Form/MapField.php
 #: CRM/Core/BAO/Mapping.php
 msgid "Update this field mapping"
-msgstr ""
+msgstr "Ažuriraj mapiranje ovog polja"
 
 #: CRM/Activity/Import/Form/MapField.php CRM/Contact/Import/Form/MapField.php
 #: CRM/Core/BAO/Mapping.php
 msgid "Save as a new field mapping"
-msgstr ""
+msgstr "Sačuvaj kao novo mapiranje polja"
 
 #: CRM/Activity/Import/Form/MapField.php CRM/Contact/Import/Form/MapField.php
 #: CRM/Core/BAO/Mapping.php
@@ -1495,7 +1495,7 @@ msgstr "Nedostaje obavezno polje: %1"
 #: CRM/Activity/Import/Form/MapField.php CRM/Contact/Import/Form/MapField.php
 #: CRM/Custom/Import/Form/MapField.php
 msgid "Name is required to save Import Mapping"
-msgstr ""
+msgstr "Ime je obavezno da bi se sačuvalo mapiranje importa"
 
 #: CRM/Activity/Import/Form/MapField.php CRM/Contact/Import/Form/MapField.php
 msgid "Duplicate Import Mapping Name"
@@ -1519,7 +1519,7 @@ msgstr "Oznaka tipa aktivnosti"
 
 #: CRM/Activity/Import/Parser/Activity.php
 msgid "Please select either Activity Type ID OR Activity Type Label."
-msgstr ""
+msgstr "Odaberite ili ID tipa aktivnosti ILI oznaka tipa aktivnosti."
 
 #: CRM/Activity/Import/Parser/Activity.php
 msgid "Missing required fields"
@@ -1753,7 +1753,7 @@ msgstr "Nemate dozvolu za uređivanje zapisa o ovom kontaktu. Kontaktirajte admi
 
 #: CRM/Contact/BAO/Contact/Utils.php
 msgid "You seem to have deleted the relationship type 'Employee of'"
-msgstr ""
+msgstr "Izgleda da ste obrisali tip veze 'Zaposlen/a u'"
 
 #: CRM/Contact/BAO/Contact/Utils.php CRM/Contact/DAO/Contact.php
 #: CRM/Contact/Form/Domain.php CRM/Contact/Form/Edit/Organization.php
@@ -1832,7 +1832,7 @@ msgstr "Neispravna id vrednosti pozdrava %1, ili nema podešenog podrazumevanog 
 
 #: CRM/Contact/BAO/Contact.php
 msgid "The Contact Sub Type does not match the Contact type for this record"
-msgstr ""
+msgstr "Podtip kontakta se ne slaže sa tipom kontakta za ovaj zapis"
 
 #: CRM/Contact/BAO/Contact.php
 msgid "Image could not be uploaded due to invalid type extension."
