--- a/po/sr_RS@latin/extension.po
+++ b/po/sr_RS@latin/extension.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-19 14:54+0000\n"
+"PO-Revision-Date: 2017-01-20 09:35+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -116,7 +116,7 @@ msgstr ""
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: %1 cannot be cleared"
-msgstr ""
+msgstr "Nemoguće raspakovati ekstenziju: %1 nije moguće ukloniti."
 
 #: CRM/Extension/Downloader.php
 msgid "Installation Error"
