--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-20 10:52+0000\n"
+"PO-Revision-Date: 2017-01-21 09:13+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1253,7 +1253,7 @@ msgstr "Morate odabrati barem jedan tip primaoca emaila."
 #: CRM/Activity/Form/Task/PickOption.php
 msgid ""
 "It appears you have no contacts with emails from the selected recipients."
-msgstr ""
+msgstr "Nema kontakata sa emailom mežu izabranim primaocima."
 
 #: CRM/Activity/Form/Task/PickProfile.php
 msgid "Batch Profile Update for Activities"
@@ -2013,7 +2013,7 @@ msgstr ""
 
 #: CRM/Contact/BAO/ProximityQuery.php
 msgid "We could not geocode the destination address."
-msgstr ""
+msgstr "Nemoguće je geokodirati adresu."
 
 #: CRM/Contact/BAO/Query.php CRM/Contact/Form/Search/Custom/Basic.php
 #: CRM/Contact/Form/Search/Custom/PostalMailing.php
@@ -2409,7 +2409,7 @@ msgstr ""
 #: CRM/Contact/DAO/Contact.php
 #: templates/CRM/Contact/Page/Inline/CommunicationPreferences.tpl
 msgid "No Bulk Emails (User Opt Out)"
-msgstr "Bez masovnih mailova(Korisnik se sam iskljčio)"
+msgstr "Bez masovnih mailova(Korisnik se sam isključio)"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Legal Identifier"
@@ -2537,7 +2537,7 @@ msgstr "ID Trenutnog poslodavca"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Contact is in Trash"
-msgstr ""
+msgstr "Kontakt je u kanti"
 
 #: CRM/Contact/DAO/Contact.php CRM/Core/BAO/ActionSchedule.php
 #: CRM/Core/DAO/Cache.php
