po: update po/sr_RS@latin/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-19 14:09+0000\n"
+"PO-Revision-Date: 2017-01-22 21:12+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -88,7 +88,7 @@ msgstr "Odabrana opcija"
 msgid ""
 "The contribution type criteria is now obsolete, please update your smart "
 "group"
-msgstr ""
+msgstr "Kriterijum za tip donacije je zastareo, molimo ažurirajte smart grupu"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contribution Thank-you Sent"
@@ -254,7 +254,7 @@ msgstr "ID Stranice za doniranje"
 
 #: CRM/Contribute/DAO/Contribution.php
 msgid "Payment Instrument ID"
-msgstr ""
+msgstr "ID sredstva plaćanja"
 
 #: CRM/Contribute/DAO/Contribution.php
 msgid "Cancel Reason"
@@ -311,7 +311,7 @@ msgstr "Učestalost periodične donacije"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Support Recurring Intervals"
-msgstr ""
+msgstr "Podrška za periodične intervale"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Recurring Installments?"
@@ -523,7 +523,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Premium.php
 msgid "Display Minimum Contribution?"
-msgstr ""
+msgstr "Prikaži minimalnu donaciju?"
 
 #: CRM/Contribute/DAO/Premium.php
 msgid "No Thank-you Text"
@@ -773,7 +773,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "The payment record has been processed."
-msgstr ""
+msgstr "Zapis o plaćanju je obrađen."
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 #: CRM/Contribute/Form/Contribution.php
@@ -1182,15 +1182,15 @@ msgstr ""
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Supported recurring units"
-msgstr ""
+msgstr "Podržane jedinice periodičnih donacija"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Support recurring intervals"
-msgstr ""
+msgstr "Podržani intervali periodičnih donacija"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Offer installments"
-msgstr ""
+msgstr "Ponudi rate"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Pay later option"
@@ -2548,11 +2548,11 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "Click here to do this for a different person."
-msgstr ""
+msgstr "Kliknite ovde da ovo uradite u ime druge osobe."
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "Not %1, or want to do this for a different person"
-msgstr ""
+msgstr "Nisam %1, ili želim da uradim ovo u ime druge osobe."
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid ""
@@ -2661,12 +2661,12 @@ msgstr ""
 msgid ""
 "An email confirmation with these payment instructions has been sent to %1 "
 "and to %2."
-msgstr ""
+msgstr "Email sa potvrdom ovih instrukcija za uplatu je poslat ka %1 i %2."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
 "An email confirmation with these payment instructions has been sent to %1."
-msgstr ""
+msgstr "Email sa potvrdom ovih instrukcija za uplatu je poslat ka %1"
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
@@ -3316,7 +3316,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid "Date Range"
-msgstr ""
+msgstr "Raspon datuma"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid ""
@@ -3547,7 +3547,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/Tab.tpl
 msgid "Contribution Links"
-msgstr ""
+msgstr "Linkovi donacije"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Tab.tpl
 msgid "New Contribution"
@@ -3984,21 +3984,21 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/PaymentInstrument.tpl
 msgid "New Payment Instrument"
-msgstr ""
+msgstr "Novo sredstvo plaćanja"
 
 #: templates/CRM/Contribute/Form/PaymentInstrument.tpl
 msgid "Edit Payment Instrument"
-msgstr ""
+msgstr "Uredi sredstvo plaćanja"
 
 #: templates/CRM/Contribute/Form/PaymentInstrument.tpl
 msgid "Delete Payment Instrument"
-msgstr ""
+msgstr "Obriši sredstvo plaćanja"
 
 #: templates/CRM/Contribute/Form/PaymentInstrument.tpl
 msgid ""
 "WARNING: Deleting this option will result in the loss of all contribution "
 "records which use this option."
-msgstr ""
+msgstr "Upozorenje: Brisanjem ove opcije će doći do gubitka svih zapisa o donacijama koji koriste ovu opciju."
 
 #: templates/CRM/Contribute/Form/Search/Common.tpl
 msgid "Contribution Dates"
@@ -4670,7 +4670,7 @@ msgstr ""
 msgid ""
 "Click <a %1>Record Contribution</a> to record a new contribution received "
 "from this contact."
-msgstr ""
+msgstr "Kliknite na <a %1>Upiši donaciju</a> da upišete novu donaciju primljenu od ovog kontakta."
 
 #: templates/CRM/Contribute/Page/Tab.tpl
 msgid ""
@@ -4939,7 +4939,7 @@ msgstr ""
 
 #: xml/templates/message_templates/contribution_recurring_notify_subject.tpl
 msgid "Recurring Contribution Notification"
-msgstr ""
+msgstr "Notifikacija periodične donacije"
 
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
 msgid "This membership will be automatically renewed every %1 %2(s)."
@@ -4984,11 +4984,11 @@ msgstr "Sve periodične donacije"
 
 #: CRM/Contribute/BAO/ContributionRecur.php CRM/Contribute/BAO/Query.php
 msgid "Recurring contributions with at least one payment"
-msgstr ""
+msgstr "Periodične donacije sa barem jednom uplatom"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "All recurring contributions regardless of payments"
-msgstr ""
+msgstr "Sve periodične donacije bez obzira na broj uplata"
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Contribute/Form/Contribution.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -5170,7 +5170,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "The recurring start date cannot be prior to the current date."
-msgstr ""
+msgstr "Datum početka periodične donacije ne može biti pre današnjeg datuma."
 
 #: CRM/Contribute/Form/Task/Batch.php CRM/Contribute/Form/Task/PickProfile.php
 #: CRM/Contribute/Task.php
@@ -5186,16 +5186,16 @@ msgstr ""
 #: CRM/Contribute/Form/Task/Delete.php
 msgid "1 contribution could not be deleted."
 msgid_plural "%count contributions could not be deleted."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "1 donacija ne može biti obrisana."
+msgstr[1] "%count donacija ne može biti obrisano."
+msgstr[2] "%count donacije ne mogu biti obrisane."
 
 #: CRM/Contribute/Form/Task/Delete.php
 msgid "1 contribution will not be deleted."
 msgid_plural "%count contributions will not be deleted."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "1 donacija neće biti obrisana."
+msgstr[1] "%count donacije neće biti obrisane."
+msgstr[2] "%count donacije neće biti obrisane."
 
 #: CRM/Contribute/Form/Task/PDF.php
 msgid "Override privacy setting? (Do not email / Do not mail)"
@@ -5390,11 +5390,11 @@ msgstr "Broj profakture:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Amount Due:"
-msgstr ""
+msgstr "Preostali dug:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Amount Due: "
-msgstr ""
+msgstr "Preostali dug:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Due Date:  "
