po: update po/sr_RS@latin/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/batch.po
+++ b/po/sr_RS@latin/batch.po
@@ -3,12 +3,12 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016
+# Đorđe Kolaković <djordje@catalystbalkans.org>, 2016-2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-02 15:15+0000\n"
+"PO-Revision-Date: 2017-01-22 20:43+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -19,7 +19,7 @@ msgstr ""
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Batch %1"
-msgstr ""
+msgstr "Serija %1"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Transactions"
@@ -27,67 +27,67 @@ msgstr "Transakcije"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "View/Add Transactions to Batch"
-msgstr ""
+msgstr "Vidi/dodaj transakcije u seriju"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
-msgstr ""
+msgstr "Ponovo otvori seriju"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Delete Batch"
-msgstr ""
+msgstr "Obriši seriju"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
-msgstr ""
+msgstr "Preuzmi seriju"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Enter records"
-msgstr ""
+msgstr "Unesi zapise"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Batch Data Entry"
-msgstr ""
+msgstr "Unos podataka u seriju"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Expected Total"
-msgstr ""
+msgstr "Očekivano ukupno"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "No batches were selected."
-msgstr ""
+msgstr "Nema odabranih serija"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "No export format selected."
-msgstr ""
+msgstr "Nije odabran format eksporta."
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch ID"
-msgstr ""
+msgstr "ID serije"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Description"
-msgstr ""
+msgstr "Opis serije"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Created By"
-msgstr ""
+msgstr "Seriju kreirao/la"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Created Date"
-msgstr ""
+msgstr "Serija kreirana datuma"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Modified By"
-msgstr ""
+msgstr "Seriju modifikovao/la"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Modified Date"
-msgstr ""
+msgstr "Serija modifikovana datuma"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Smart Group"
-msgstr ""
+msgstr "Smart grupa serije"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Total"
@@ -99,11 +99,11 @@ msgstr ""
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Payment Instrument"
-msgstr ""
+msgstr "Sredstvo plaćanja serije"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Exported Date"
-msgstr ""
+msgstr "Datum eksportovanja serije"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Data"
@@ -111,7 +111,7 @@ msgstr ""
 
 #: CRM/Batch/Form/Batch.php
 msgid "Batch Deleted"
-msgstr ""
+msgstr "Serija obrisana"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Profile for bulk data entry is missing."
@@ -156,11 +156,11 @@ msgstr ""
 
 #: CRM/Batch/Form/Entry.php
 msgid "Batch Processed."
-msgstr ""
+msgstr "Serija obrađena"
 
 #: CRM/Batch/Page/Batch.php
 msgid "Batch Processing"
-msgstr ""
+msgstr "Obrada serije"
 
 #: templates/CRM/Batch/Form/Batch.tpl
 msgid "Delete Data Entry Batch"
@@ -190,11 +190,11 @@ msgstr ""
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid "Total amount expected"
-msgstr ""
+msgstr "Očekivani ukupan iznos"
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid "Total amount entered"
-msgstr ""
+msgstr "Unešen ukupan iznos"
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid "Open Pledges (Due Date - Amount)"
@@ -222,7 +222,7 @@ msgstr ""
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Payment Method"
-msgstr ""
+msgstr "Metod plaćanja serije"
 
 #: CRM/Batch/DAO/EntityBatch.php
 msgid "EntityBatch ID"
@@ -240,7 +240,7 @@ msgstr ""
 
 #: CRM/Batch/Form/Entry.php
 msgid "Transaction ID must be unique within the database"
-msgstr ""
+msgstr "ID transakcije mora biti unikatan u bazi podataka."
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
